@@ -16,6 +16,7 @@ Changelog
  * Renamed `target_model` argument on `PageChooserBlock` to `page_type` (Loic Teixeira)
  * `edit_handler` and `panels` can now be defined on a `ModelAdmin` definition (Thomas Kremmel)
  * Add Learn Wagtail to third-party tutorials in documentation (Matt Westcott)
+ * Add a Django setting `TAG_LIMIT` to limit number of tags that can be added to any taggit model (Mani)
  * Fix: Set `SERVER_PORT` to 443 in `Page.dummy_request()` for HTTPS sites (Sergey Fedoseev)
  * Fix: Include port number in `Host` header of `Page.dummy_request()` (Sergey Fedoseev)
  * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
